--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 PORT = 5000 
 
-DB_URI=mongodb+srv://scan:scan@cluster0.eggyv57.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+DB_URI=
 SecretOrkey=mysecretkey
